[gd_scene load_steps=5 format=1]

[ext_resource path="res://Scripts/Projectiles/ScorchingMissile.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Spells/Fire/fireball.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 12.0

[sub_resource type="ConvexPolygonShape2D" id=2]

custom_solver_bias = 0.0
points = Vector2Array( 0, 0, 40, 100, -40, 100 )

[node name="ScorchingMissile" type="KinematicBody2D"]

input/pickable = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="DetectionArea" type="Area2D" parent="."]

transform/scale = Vector2( 3, 3 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]

shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[connection signal="body_enter" from="Area2D" to="." method="_on_Area2D_body_enter"]

[connection signal="area_enter" from="DetectionArea" to="." method="_on_DetectionArea_area_enter"]


